--- a/src/view/Main.fxml
+++ b/src/view/Main.fxml
@@ -1,17 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <!--xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1"*/-->
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0"
-            prefWidth="1328.0" xmlns="http://javafx.com/javafx" xmlns:fx="http://javafx.com/fxml" fx:controller="controller.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1328.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
 
    <children>
 
@@ -21,7 +16,7 @@
                <font>
                   <Font size="24.0" />
                </font></Label>
-            <TextField layoutX="414.0" layoutY="21.0" prefHeight="27.0" prefWidth="184.0" promptText="Search by Part ID or Name" />
+            <TextField fx:id="OnSearchText" layoutX="414.0" layoutY="21.0" onKeyTyped="#OnSearchStringEntered" prefHeight="27.0" prefWidth="184.0" promptText="Search by Part ID or Name" />
             <Button fx:id="OnPartAddButton" layoutX="377.0" layoutY="454.0" mnemonicParsing="false" onAction="#OnPartAddButton" text="Add" />
             <Button fx:id="OnPartModifyButton" layoutX="430.0" layoutY="454.0" mnemonicParsing="false" onAction="#OnPartModifyButton" text="Modify" />
             <Button fx:id="OnPartDeleteButton" layoutX="506.0" layoutY="454.0" mnemonicParsing="false" onAction="#OnPartDeleteButton" text="Delete" />
