--- a/src/view/AddModifyProductScene.fxml
+++ b/src/view/AddModifyProductScene.fxml
@@ -133,21 +133,21 @@
             <Button fx:id="OnPartAddToProductButton" layoutX="441.0" layoutY="275.0" mnemonicParsing="false" onAction="#OnPartAddToProductButton" text="Add" />
             <TableView fx:id="pickPartsTableView" layoutX="13.0" layoutY="64.0" prefHeight="201.0" prefWidth="571.0" AnchorPane.rightAnchor="14.0">
                <columns>
-                  <TableColumn fx:id="partIDColumn" prefWidth="81.0" text="Part ID" />
-                  <TableColumn fx:id="partNameColumn" prefWidth="202.0" text="Part Name" />
-                  <TableColumn fx:id="partInventoryLevelColumn" prefWidth="143.0" text="Inventory Level" />
-                  <TableColumn fx:id="partPriceCostPerUnitColumn" prefWidth="162.0" text="Price / Cost per Unit" />
+                  <TableColumn fx:id="addPartIDColumn" prefWidth="81.0" text="Part ID" />
+                  <TableColumn fx:id="addPartNameColumn" prefWidth="202.0" text="Part Name" />
+                  <TableColumn fx:id="addPartInventoryLevelColumn" prefWidth="143.0" text="Inventory Level" />
+                  <TableColumn fx:id="addPartPriceCostPerUnitColumn" prefWidth="162.0" text="Price / Cost per Unit" />
                </columns>
             </TableView>
             <AnchorPane layoutX="-2.0" layoutY="310.0" prefHeight="280.0" prefWidth="588.0">
                <children>
                   <Button fx:id="OnPartRemoveFromProductButton" layoutX="388.0" layoutY="275.0" mnemonicParsing="false" onAction="#OnPartRemoveFromProductButton" text="Remove Associated Part" />
-                  <TableView fx:id="ProductPartsTableView" layoutX="3.0" layoutY="54.0" prefHeight="201.0" prefWidth="571.0" AnchorPane.rightAnchor="14.0">
+                  <TableView fx:id="currentPartsTableView" editable="true" layoutX="3.0" layoutY="54.0" prefHeight="201.0" prefWidth="571.0" AnchorPane.rightAnchor="14.0">
                      <columns>
-                        <TableColumn fx:id="addPartIDColumn" prefWidth="81.0" text="Part ID" />
-                        <TableColumn fx:id="addPartNameColumn" prefWidth="202.0" text="Part Name" />
-                        <TableColumn fx:id="addPartInventoryLevelColumn" prefWidth="143.0" text="Inventory Level" />
-                        <TableColumn fx:id="addPartPriceCostPerUnitColumn" prefWidth="162.0" text="Price / Cost per Unit" />
+                        <TableColumn fx:id="currentPartIDColumn" prefWidth="81.0" text="Part ID" />
+                        <TableColumn fx:id="currentPartNameColumn" prefWidth="202.0" text="Part Name" />
+                        <TableColumn fx:id="currentPartInventoryLevelColumn" prefWidth="143.0" text="Inventory Level" />
+                        <TableColumn fx:id="currentPartPriceCostPerUnitColumn" prefWidth="162.0" text="Price / Cost per Unit" />
                      </columns>
                   </TableView>
                </children>
