Can now save new parts and modify parts.
Now have a functioning search bar, case-insensitive.

Search functions now match UML diagram correctly.

One more save before exception handling.

Added Product Tables and Screen with Buttons.  Both searches working for main now.

All buttons are working now.  There are some logic glitches in passing data and displaying tableviews.

Looking done.  Just adding JavaDoc comments and DRYing out some code.

Requirements Fulfilled.

--- a/src/view/AddModifyProductScene.fxml
+++ b/src/view/AddModifyProductScene.fxml
@@ -98,7 +98,7 @@
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField fx:id="TextProductID" editable="false" prefHeight="27.0" prefWidth="157.0" promptText="Auto Generated - Disabled" style="-fx-background-color: grey;" GridPane.columnIndex="1" GridPane.columnSpan="2" />
+                  <TextField fx:id="TextProductID" editable="false" prefHeight="27.0" prefWidth="157.0" promptText="Auto Generated - Disabled" style="-fx-background-color: LightGray;" GridPane.columnIndex="1" GridPane.columnSpan="2" />
                   <TextField fx:id="TextProductName" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="1" />
                   <TextField fx:id="TextInventoryProduct" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <TextField fx:id="TextPriceCostProduct" GridPane.columnIndex="1" GridPane.rowIndex="3" />
