--- a/src/view/AddModifyPartScene.fxml
+++ b/src/view/AddModifyPartScene.fxml
@@ -110,7 +110,7 @@
                         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
                      </GridPane.margin>
                   </Label>
-                  <TextField fx:id="TextPartID" editable="false" promptText="Auto Generated - Disabled" GridPane.columnIndex="1" />
+                  <TextField fx:id="TextPartID" editable="false" promptText="Auto Generated - Disabled" style="-fx-background-color: LightGray;" GridPane.columnIndex="1" />
                   <TextField fx:id="TextPartName" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                   <TextField fx:id="TextInventoryPart" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                   <TextField fx:id="TextPriceCostPart" GridPane.columnIndex="1" GridPane.rowIndex="3" />
