--- a/src/view/Main.fxml
+++ b/src/view/Main.fxml
@@ -1,16 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
 <!--xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1"*/-->
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1328.0" xmlns="http://javafx.com/javafx/15.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="810.0" prefWidth="1328.0" xmlns="http://javafx.com/javafx/11.0.2" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.MainController">
 
    <children>
 
@@ -32,6 +28,7 @@
                   <TableColumn fx:id="partPriceCostPerUnitColumn" prefWidth="162.0" text="Price / Cost per Unit" />
               </columns>
             </TableView>
+            <Label fx:id="OnNoPartsFound" layoutX="318.0" layoutY="25.0" prefHeight="17.0" prefWidth="95.0" text="No Parts Found" textFill="RED" visible="false" />
          </children>
       </AnchorPane>
       <Label layoutX="70.0" layoutY="53.0" prefHeight="60.0" prefWidth="533.0" text="Inventory Management System">
@@ -63,6 +60,7 @@
                   <Font size="20.0" />
                </font>
             </Button>
+            <Label fx:id="OnNoProductsFound" layoutX="303.0" layoutY="26.0" prefHeight="17.0" prefWidth="108.0" text="No Products Found" textFill="RED" visible="false" />
          </children>
       </AnchorPane>
    </children>
